Bone Action Constraints with shared Action leads to glitches #48234

Closed
opened 2016-04-22 04:49:06 +02:00 by Paul R · 10 comments

System Information
Suse Leap 42.1
NVidia GTX 560ti (official drivers)

Blender Version
Broken: 2.77a
Worked: -

Short description of error
If Bone Action Constraints are assigned to bones in different armatures and all share the same Action, the animation will usually glitch if two or more targets are moved at the same time. Affects view-port and final renders.

Example video:
https://www.youtube.com/watch?v=uYD3E5xaJag&t=41

Exact steps for others to reproduce the error

Workaround

  • create copies of the original Action - one for each bone/constraint
    (looks like Blender might be caching the Action positions?)
**System Information** Suse Leap 42.1 NVidia GTX 560ti (official drivers) **Blender Version** Broken: 2.77a Worked: - **Short description of error** If Bone Action Constraints are assigned to bones in different armatures and all share the same Action, the animation will usually glitch if two or more targets are moved at the same time. Affects view-port and final renders. Example video: https://www.youtube.com/watch?v=uYD3E5xaJag&t=41 **Exact steps for others to reproduce the error** - open .blend [blender_bone_action_constraints_bug.blend](https://archive.blender.org/developer/F304790/blender_bone_action_constraints_bug.blend) - select all Empties - move slowly along Z axis - bone animations will glitch **Workaround** - create copies of the original Action - one for each bone/constraint (looks like Blender might be caching the Action positions?)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @intracube

Added subscriber: @intracube

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29

This is a threading issue (running Blender mono-threaded, with -t 1 command line option, shows no problem). We are evaluating the same action in parallel for different frames, fiddling with its update flags, etc. No good.

@Sergey from quick look, think we can either:

  • Lock around action evaluation itself (last part of what_does_obaction(), or maybe even in constraint exec itself).
  • Make temp copy of action for its evaluation (but would expect this to be overkilling?).
  • Change depsgraph to check this situation??? Doubt this is really doable or desired though.

First solution sounds simpler one to me, but likely not the optimal one…

This is a threading issue (running Blender mono-threaded, with `-t 1` command line option, shows no problem). We are evaluating the same action in parallel for different frames, fiddling with its update flags, etc. No good. @Sergey from quick look, think we can either: * Lock around action evaluation itself (last part of `what_does_obaction()`, or maybe even in constraint exec itself). * Make temp copy of action for its evaluation (but would expect this to be overkilling?). * Change depsgraph to check this situation??? Doubt this is really doable or desired though. First solution sounds simpler one to me, but likely not the optimal one…
Author

In #48234#371151, @mont29 wrote:
This is a threading issue (running Blender mono-threaded, with -t 1 command line option, shows no problem).

Ah, thanks.

Can confirm that -t 1 fixes the issue with all my armature/constraint setups.

> In #48234#371151, @mont29 wrote: > This is a threading issue (running Blender mono-threaded, with `-t 1` command line option, shows no problem). Ah, thanks. Can confirm that `-t 1` fixes the issue with all my armature/constraint setups.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

We could move away from using FCurve.curval.
This patch fixes the bug for me: P364

... just makes some local changes to avoid using FCurve.curval.

We could move away from using `FCurve.curval`. This patch fixes the bug for me: [P364](https://archive.blender.org/developer/P364.txt) ... just makes some local changes to avoid using FCurve.curval.

This issue was referenced by c6cc599311

This issue was referenced by c6cc5993118965ae4208d748c54e7a70a3c5c1d3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

It's now working as expected. Thanks for the fix!

It's now working as expected. Thanks for the fix!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48234
No description provided.